tests/snapshot/error/source_locations/expression/yield_star/return_throws.exp
Error: return
  ┌ source_locations/expression/yield_star/return_throws.js:8:15
  |
8 |         throw new Error('return');
  |               ^
Stack trace:
  at return (source_locations/expression/yield_star/return_throws.js:8:15)
  at generator (source_locations/expression/yield_star/return_throws.js:15:3)
  at return (<native>)
  at <global> (source_locations/expression/yield_star/return_throws.js:20:1)